# driven

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
commands/: driven.md
docs/superpowers/plans/: 2026-06-11-graph-index.md
docs/superpowers/specs/: 2026-06-11-driven-lecture-active-design.md  2026-06-11-graph-index-design.md  2026-06-16-driven-consolidation-design.md
scripts/: gen-cowork-zip.sh  graph.py  native_memory_dir.py  search_memories.py
skills/driven/: SKILL.md
skills/driven/references/: askuserquestion.md  audit-sections.md  capitalise-workflow.md  challenge-anti-recidive.md  claude-md-template.md  cloture-session.md  comprehension-contextuelle.md  connaissance-vs-memoire.md  consolidation.md  cross-author.md  decoupage-progressif.md  drive-conflicts.md  factualite.md  frontmatter.md  gestion-contexte.md  graphe.md  interface-cli.md  lecture-arborescente.md  lessons.md  links.md  maintenance-fichiers-racines.md  me-md.md  memoire-projet-code.md  memory.md  proactivite.md  propagation.md  recuperation-contexte.md  routage.md  scope-check.md  session-handoff.md  setup-dossier.md  skill-creator-routing.md  soul-md.md  stop-slop-routing.md  verbosity-tech-level.md  voice-md.md
tests/: conftest.py  test_build.py  test_extract.py  test_native_bridge.py  test_native_memory_dir.py  test_subcommands.py
