[project]
name = "driven-scripts"
version = "1.12.0"
description = "Scripts internes du plugin driven : graphe structurel, recherche BM25, résolution de la mémoire native d'un repo."
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
